Fixed gallery vertical overflow in firefox

--- a/client/src/app/components/gallery/gallery.component.scss
+++ b/client/src/app/components/gallery/gallery.component.scss
@@ -3,7 +3,7 @@
 .gallery-img {
   object-fit: contain;
   width: calc(380px - 0.2rem);
-  height: 244px;
+  height: 240px;
   margin: auto;
 
   @include small {
